# EverLauncherAPI

./: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
rust/: lib.rs
src/: EverConfig.ts  EverDownloader.ts  EverLauncher.ts  GameConfig.ts  Utils.ts  default_deploy.json  index.ts
