[package]
name = "everlauncher_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }
reqwest = { version = "0.11.4", features = ["stream"] }
tokio = { version = "1.9.0", features = ["full"] }
once_cell = "1.8.0"
futures-util = "0.3.15"
sha2 = "0.9.5"
hex = "0.4.3"
zip = "0.5.13"

[lib]
name = "everlauncher_api"
path = "rust/lib.rs"
